[package]
name = "extsort-iter"
version = "0.3.0"
edition = "2021"
authors = ["Felix Giese <felix.giese@icloud.com>"]
description = "external sorting for all types for all iterators"
repository = "https://github.com/fegies/extsort-iter"
documentation = "https://github.com/fegies/extsort-iter"
readme = "README.md"
license = "MIT"
keywords = ["sorting", "external", "iterator"]
exclude = ["target/**", "flake.*", ".vscode", ".devenv/**", ".direnv/**", ".github/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
parallel_sort = ["dep:rayon"]
compression = []
compression_lz4_flex = ["compression", "dep:lz4_flex"]

[dependencies]
rayon = {version = "1", optional = true}
lz4_flex = {version = "0.11", optional = true }

[dev-dependencies]
rand = "0.8.5"
num_cpus = "1"

[package.metadata.docs.rs]
all-features = true